package com.twitter.elephantbird.examples.proto;

// The sample protocol buffer file that Google uses in their examples at
// http://code.google.com/p/protobuf.
// Used in this project for tests and examples.

option java_outer_classname = "AddressBookProtos";

message Person {
  required string name = 1;
  required int32 id = 2;
  optional string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    required string number = 1;
    optional PhoneType type = 2 [default = HOME];
  }

  repeated PhoneNumber phone = 4;

  extensions 1000 to max;
}

message AddressBook {
  repeated Person person = 1;

  extensions 1000 to max;
}

message PersonExt {
  extend Person {
    optional PersonExt ext_info = 1000;
  }

  optional string address = 1;
}

message JustPersonExtExtEnclosingType {
  extend Person {
    optional string ext_ext_info = 1001;
  }
}

extend AddressBook {
  optional string name = 1001;
}

